--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>HTML Project with iframes</h1>
     <h2>Local Content</h2>
-    <iframe src="\temp.html" frameborder="2">
+    <iframe src="https://baraiyyapriyanka.github.io/Content/" frameborder="2">
        
     </iframe>
     <h2>External Website</h2>
