--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2>External Website</h2>
     <iframe src="https://www.geekster.in" frameborder="2"  height="300" width="600"></iframe>
     <h2>YouTube Video</h2>
-    <iframe width="" height="300" src="https://www.youtube.com/embed/H335Vdkmdhk" title="From Mechanical Engineer to Tech Success | Inspiring Journey of Geekster Alumni |Multiple Job Offers" frameborder="2" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="600" height="300" src="https://www.youtube.com/embed/H335Vdkmdhk" title="From Mechanical Engineer to Tech Success | Inspiring Journey of Geekster Alumni |Multiple Job Offers" frameborder="2" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     
 </body>
 </html>
